# D-Flat

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
dflat/: CMakeLists.txt
dflat-executable/: CMakeLists.txt  main.cpp
dflat/include/dflat/: classifier.hpp  command_line_args.hpp  lexer.hpp  syntax_tree.hpp  token.hpp
dflat/src/: classifier.cpp  command_line_args.cpp  lexer.cpp  syntax_tree.cpp  token.cpp
dflat/test/: CMakeLists.txt
examples/: declaring_functions.df  declaring_variables.df
